added message and altered design

--- a/card.html
+++ b/card.html
@@ -11,9 +11,12 @@
     <div class="container">
       <h1>Will you be my Valentine? 💖</h1>
 
-      <div class="buttons">
+      <div class="buttons" id="buttonsArea">
         <button id="yesBtn">Yes</button>
-        <button id="noBtn">No</button>
+        <div class="no-wrapper" id="noWrapper">
+          <div class="no-message" id="noMessage"></div>
+          <button id="noBtn">No</button>
+        </div>
       </div>
 
       <div id="overlay" class="hidden">
